--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,8 +32,6 @@ h1 {
   -ms-flex-preferred-size: 200px;
       flex-basis: 200px;
   margin: 10px;
-  border-radius: 5px;
-  overflow: hidden;
   font-weight: 600;
 }
 
@@ -43,6 +41,8 @@ h1 {
   color: #dfdcf3;
   text-align: end;
   text-transform: uppercase;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 /* Birthday */
@@ -54,6 +54,8 @@ h1 {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   min-height: 200px;
+  border: 2px solid #ccc;
+  border-top: none;
 }
 
 .birthdays li {
@@ -70,24 +72,23 @@ h1 {
 }
 
 .empty {
-  background-color: #ccc;
-  font-family: "FontAwesome";
+  background-color: rgba(0, 0, 0, 0.1);
+  position: relative;
 }
 
 .empty::before {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #777;
-  content: "\f119 ";
-  font-size: 50px;
+  content: " ";
+  background-image: url("../images/empty.svg");
+  background-size: contain;
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 5;
 }
 
 .big {
