--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -174,7 +174,7 @@ li.smallest {
 form {
   margin-top: 40px;
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-around;
   color: #555;
   font-size: 20px;
 }
@@ -189,8 +189,20 @@ textarea {
 textarea:focus {
   outline: none;
 }
-.form-element {
-  flex-basis: 45%;
+
+textarea::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
+}
+
+textarea::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #4285f4;
+}
+
+.form-element:first-child {
+  flex-basis: 65%;
+  margin-right: 50px;
 }
 
 .form-element input {
@@ -200,7 +212,8 @@ textarea:focus {
 }
 
 .form-element input[type="number"] {
-  padding: 10px;
+  padding: 10px 100px 10px 15px;
+  font-size: 20px;
 }
 
 .form-element input[type="number"]:focus {
@@ -208,12 +221,15 @@ textarea:focus {
 }
 
 .form-element input[type="submit"] {
-  padding: 10px 20px;
+  padding: 15px 30px;
   margin: 20px 0;
   border: none;
   border-radius: 5px;
   background-color: #0186ef;
-  color: #fff;
+  color: #eee;
+  font-size: 20px;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 /*=================================
