--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 h1 {
   margin: 40px 0;
   color: #555;
-  font-size: 30px;
+  font-size: 40px;
   text-align: center;
 }
 
@@ -21,55 +21,57 @@ h1 {
 =================================*/
 /* Calendar */
 .calendar .wrapper > ul {
+  margin: 20px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 .calendar .wrapper > ul > li {
-  -ms-flex-preferred-size: 200px;
-      flex-basis: 200px;
-  margin: 10px;
+  margin: 5px;
+  -ms-flex-preferred-size: 14%;
+      flex-basis: 14%;
   font-weight: 600;
 }
 
 .calendar li h3 {
   padding: 10px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   background-color: #ab9eee;
   color: #dfdcf3;
   text-align: end;
   text-transform: uppercase;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
 }
 
 /* Birthday */
 .birthdays {
-  background-color: #fff;
-  display: block;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  min-height: 200px;
   border: 2px solid #ccc;
   border-top: none;
+  min-height: 200px;
+  display: block;
+  background-color: #fff;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .birthdays li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  color: #fff;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-weight: 600;
 }
 
 .empty {
-  background-color: rgba(0, 0, 0, 0.1);
   position: relative;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .empty::before {
@@ -84,52 +86,51 @@ h1 {
   height: 50px;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  z-index: 5;
 }
 
 li.big {
+  height: 200px;
+  width: 100%;
+  display: inline-block;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
-  height: 200px;
-  display: inline-block;
-  width: 100%;
 }
 
 li.medium {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
   width: 50%;
   height: 100px;
   display: inline-block;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
 }
 
 li.small {
-  -ms-flex-preferred-size: 33.33%;
-      flex-basis: 33.33%;
+  height: 50px;
   width: 33.34%;
   display: inline-block;
-  height: 50px;
+  -ms-flex-preferred-size: 33.33%;
+      flex-basis: 33.33%;
 }
 
 li.smallest {
+  height: 50px;
+  width: 33.34%;
+  display: inline-block;
   -ms-flex-preferred-size: 33.33%;
       flex-basis: 33.33%;
-  display: inline-block;
-  width: 33.34%;
-  height: 50px;
 }
 
 .name {
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .count {
@@ -139,47 +140,38 @@ li.smallest {
 }
 
 .birthdays li:nth-child(1n + 1) {
-  color: #fff;
   background-color: #555d7b;
 }
 
 .birthdays li:nth-child(2n + 2) {
-  color: #fff;
   background-color: #9fd400;
 }
 
 .birthdays li:nth-child(3n + 3) {
-  color: #fff;
   background-color: #c97d99;
 }
 
 .birthdays li:nth-child(4n + 4) {
-  color: #fff;
   background-color: #79cae5;
 }
 
 .birthdays li:nth-child(5n + 5) {
-  color: #fff;
   background-color: #e8492a;
 }
 
 .birthdays li:nth-child(6n + 6) {
-  color: #fff;
   background-color: #0055d0;
 }
 
 .birthdays li:nth-child(7n + 7) {
-  color: #fff;
   background-color: #ff1baa;
 }
 
 .birthdays li:nth-child(8n + 8) {
-  color: #fff;
   background-color: #555d7b;
 }
 
 .birthdays li:nth-child(9n + 9) {
-  color: #fff;
   background-color: #0dccfe;
 }
 
@@ -194,9 +186,9 @@ form {
 }
 
 textarea {
-  width: 100%;
-  border: 1px solid #ccc;
   padding: 10px;
+  border: 1px solid #ccc;
+  width: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -216,15 +208,15 @@ textarea::-webkit-scrollbar-thumb {
 }
 
 .form-element:first-child {
+  margin-right: 50px;
   -ms-flex-preferred-size: 65%;
       flex-basis: 65%;
-  margin-right: 50px;
 }
 
 .form-element input {
+  margin: 10px 0;
   border: 1px solid #ccc;
   display: block;
-  margin: 10px 0;
 }
 
 .form-element input[type="number"] {
@@ -237,8 +229,8 @@ textarea::-webkit-scrollbar-thumb {
 }
 
 .form-element input[type="submit"] {
-  padding: 15px 30px;
   margin: 20px 0;
+  padding: 15px 30px;
   border: none;
   border-radius: 5px;
   background-color: #0186ef;
@@ -248,15 +240,11 @@ textarea::-webkit-scrollbar-thumb {
   text-transform: uppercase;
 }
 
+.error {
+  color: #f00;
+}
+
 /*=================================
   main styling ends here
 =================================*/
-/*=================================
-  footer styling starts here
-=================================*/
-/*=================================
-  footer styling ends here
-=================================*/
-/*media query starts*/
-/*media query for 995px starts here*/
 /*# sourceMappingURL=style.css.map */
