--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,11 +30,12 @@ h1 {
 .calendar .wrapper > ul { 
   margin: 20px 0;
   display: flex; 
+ 
 }
 
 .calendar .wrapper > ul > li {
   margin: 5px;
-  flex-basis: 14%;
+  flex-basis: 200px;
   font-weight: 600;
 }
 
@@ -50,12 +51,13 @@ h1 {
 
 /* Birthday */
 .birthdays {
-  border: 2px solid #ccc;
+  border: 1px solid #ccc;
   border-top: none;
   min-height: 200px;
   display: block;
   background-color: #fff;
   flex-wrap: wrap;
+  box-sizing: border-box;
 }
 
 .birthdays li {
